[gd_scene load_steps=18 format=3 uid="uid://ciyba71ed3ha5"]

[ext_resource type="Script" uid="uid://lun3uqjhmlib" path="res://scripts/menus/main_menu/main_menu.gd" id="1_xbn2l"]
[ext_resource type="Texture2D" uid="uid://cvknadcc720qc" path="res://assets/Mini Pixel Pack 3/Mini Pixel Pack 3/Player ship/Player_ship (16 x 16).png" id="2_1nwmw"]
[ext_resource type="Texture2D" uid="uid://cbq1m0lx0y826" path="res://assets/bgparalax/Stars-Big_1_2_PC.png" id="2_ml8bw"]
[ext_resource type="Texture2D" uid="uid://cegulrq8wt5ct" path="res://assets/bgparalax/Nebula Blue.png" id="3_oic2i"]
[ext_resource type="Theme" uid="uid://t3vl80sdwm8r" path="res://themes/main_menu.tres" id="5_er5qh"]
[ext_resource type="AudioStream" uid="uid://82f5sqxrcqrm" path="res://assets/sons/mixkit-boss-fight-arcade-232.mp3" id="5_f7ts8"]
[ext_resource type="PackedScene" uid="uid://s2dhd4ur5lvf" path="res://menus/settings_menu/settings_menu.tscn" id="6_f7ts8"]

[sub_resource type="Sky" id="Sky_yso3o"]

[sub_resource type="Environment" id="Environment_vu5tu"]
background_mode = 3
sky = SubResource("Sky_yso3o")
ambient_light_source = 3
ambient_light_color = Color(0.614448, 0.436919, 0.659209, 1)
reflected_light_source = 2
glow_enabled = true
glow_intensity = 0.58
glow_bloom = 1.0
glow_hdr_luminance_cap = 179.07

[sub_resource type="Animation" id="Animation_1nwmw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 65.335)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(281, 176)]
}

[sub_resource type="Animation" id="Animation_ml8bw"]
resource_name = "menu_ship_idle_anim"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.3),
"transitions": PackedFloat32Array(1, 2.07053, 0.287175),
"update": 0,
"values": [Vector2(0, 65.335), Vector2(0, -11.235), Vector2(0, -6.89)]
}

[sub_resource type="Animation" id="Animation_vu5tu"]
resource_name = "menu_ship_idle_anim_2"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.733333, 1.46667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -6.89), Vector2(0, -9.37), Vector2(0, -6.89)]
}

[sub_resource type="Animation" id="Animation_oic2i"]
resource_name = "ship_go_out_screen_anim"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.304631, 1.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(281, 176), Vector2(281, 196.705), Vector2(281, -100)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oic2i"]
_data = {
&"RESET": SubResource("Animation_1nwmw"),
&"menu_ship_idle_anim": SubResource("Animation_ml8bw"),
&"menu_ship_idle_anim_2": SubResource("Animation_vu5tu"),
&"ship_go_out_screen_anim": SubResource("Animation_oic2i")
}

[sub_resource type="Animation" id="Animation_f7ts8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_er5qh"]
resource_name = "go_out_buttons_anim"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(27.5, 17.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_81su3"]
_data = {
&"RESET": SubResource("Animation_f7ts8"),
&"go_out_buttons_anim": SubResource("Animation_er5qh")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xbn2l")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_vu5tu")

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 4
color = Color(0.051971, 0.051971, 0.051971, 1)

[node name="BGParalax" type="Node2D" parent="."]

[node name="Parallax2DStars" type="Parallax2D" parent="BGParalax"]
scroll_scale = Vector2(0.5, 0.5)
repeat_size = Vector2(0, 1024)
autoscroll = Vector2(0, -50)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="BGParalax/Parallax2DStars"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_ml8bw")
centered = false

[node name="Parallax2DNebula" type="Parallax2D" parent="BGParalax"]
repeat_size = Vector2(0, 1024)
autoscroll = Vector2(0, -50)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="BGParalax/Parallax2DNebula"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_oic2i")
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="BGParalax"]

[node name="Node2D" type="Node2D" parent="."]

[node name="ColorRect2" type="ColorRect" parent="Node2D"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 414.0
offset_top = -21.0
offset_right = 624.0
offset_bottom = 388.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="Node2D"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -32.0
offset_right = 140.0
offset_bottom = 377.0
grow_vertical = 2
size_flags_horizontal = 0
color = Color(0, 0, 0, 1)

[node name="Player" type="Node2D" parent="."]
position = Vector2(281, 176)
scale = Vector2(7.25, 7.25)

[node name="PlayerShip(16X16)" type="Sprite2D" parent="Player"]
texture = ExtResource("2_1nwmw")
offset = Vector2(0, 65.335)
hframes = 3
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player/PlayerShip(16X16)"]
libraries = {
&"": SubResource("AnimationLibrary_oic2i")
}
autoplay = "menu_ship_idle_anim"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ControlButtons" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ControlButtons"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -134.0
offset_right = 55.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="ButtonNew" type="Button" parent="CanvasLayer/ControlButtons/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_er5qh")
text = "New game"

[node name="ButtonContinue" type="Button" parent="CanvasLayer/ControlButtons/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_er5qh")
text = "Continue"

[node name="ButtonSettings" type="Button" parent="CanvasLayer/ControlButtons/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_er5qh")
text = "Settings"

[node name="ButtonExit" type="Button" parent="CanvasLayer/ControlButtons/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_er5qh")
text = "Exit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ControlButtons"]
libraries = {
&"": SubResource("AnimationLibrary_81su3")
}

[node name="SettingsMenu" parent="CanvasLayer" instance=ExtResource("6_f7ts8")]
visible = false

[node name="Node2DAudios" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Node2DAudios"]
stream = ExtResource("5_f7ts8")
volume_db = 14.154
autoplay = true
bus = &"Music"
parameters/looping = true

[connection signal="pressed" from="CanvasLayer/ControlButtons/VBoxContainer/ButtonNew" to="." method="_on_button_new_pressed"]
[connection signal="pressed" from="CanvasLayer/ControlButtons/VBoxContainer/ButtonContinue" to="." method="_on_button_continue_pressed"]
[connection signal="pressed" from="CanvasLayer/ControlButtons/VBoxContainer/ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/ControlButtons/VBoxContainer/ButtonExit" to="." method="_on_button_exit_pressed"]
